--- a/dashboard/dash_ui/templates/scratch.html
+++ b/dashboard/dash_ui/templates/scratch.html
@@ -395,7 +395,7 @@
                             </span>
                         </a>
                     
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="font-size: {{pie_options.3}}px; padding: 5px;">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="font-size: {{settings_font}}px; padding: 5px;">
         
                             Text:
                             <div class="dropdown-divider"></div>
@@ -418,8 +418,8 @@
                         </div>
                     </div>
                     {% if info == '2' %}
-                        <p style="font-size: 17px;">Hello {{user_profile.first_name}}!</p>
-                        <p style="font-size: 17px;">Meeting: {{meeting_object.title}}</p>
+                        <p style="font-size: 16px;">Hello {{user_profile.first_name}}!</p>
+                        <p style="font-size: 16px;">Meeting: {{meeting_object.title}}</p>
                     {% else %}
                         <p>Hello {{user_profile.first_name}}!</p>
                         <p>Meeting: {{meeting_object.title}}</p>
