Open in new window functionality

--- a/dashboard/dash_ui/templates/accessibility.html
+++ b/dashboard/dash_ui/templates/accessibility.html
@@ -298,9 +298,9 @@
                 <div class="col-sm-2" style="background: #f1f1f1; width: 18.5%;" align="center">
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 17px;">Percentage of Talking Time</p>
+                        <p class="text-center" style="font-size: 17px;">Talking Time</p>
                     {% else %}
-                        <p class="text-center">Percentage of Talking Time</p>
+                        <p class="text-center">Talking Time</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div id="talkchart" style="width: 85%; height: 150px;"></div>
@@ -337,9 +337,9 @@
                 <div class="col-sm-2" style="background: #f1f1f1; width: 18.5%;" align="center">
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Emotion Level</p>
+                        <p class="text-center" style="font-size: 18px;">Attentiveness</p>
                     {% else %}
-                        <p class="text-center">Emotion Level</p>
+                        <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div class="progress justify-content-center" style="height: 20px; width: 90%;">
@@ -354,9 +354,9 @@
                     
                     {% if participant_num > 2 %}
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Participant Interactions</p>
+                        <p class="text-center" style="font-size: 18px;">Interactions</p>
                     {% else %}
-                        <p class="text-center">Participant Interactions</p>
+                        <p class="text-center">Interactions</p>
                     {% endif %}
                         {% if size == '1' %}
                             <div id="interactionchart" style="width: 90%; height: 100px; margin-top: 15%;"></div>
@@ -435,9 +435,9 @@
 
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 17px;">Percentage of Talking Time</p>
+                        <p class="text-center" style="font-size: 17px;">Talking Time</p>
                     {% else %}
-                        <p class="text-center">Percentage of Talking Time</p>
+                        <p class="text-center">Talking Time</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div id="talkchart" style="width: 85%; height: 150px;"></div>
@@ -447,9 +447,9 @@
 
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Emotion Level</p>
+                        <p class="text-center" style="font-size: 18px;">Attentiveness</p>
                     {% else %}
-                        <p class="text-center">Emotion Level</p>
+                        <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div class="progress justify-content-center" style="height: 20px; width: 90%;">
@@ -496,9 +496,9 @@
                     <br>
                     {% if participant_num > 2 %}
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Participant Interactions</p>
+                        <p class="text-center" style="font-size: 18px;">Interactions</p>
                     {% else %}
-                        <p class="text-center">Participant Interactions</p>
+                        <p class="text-center">Interactions</p>
                     {% endif %}
                         {% if size == '1' %}
                             <div id="interactionchart" style="width: 90%; height: 100px; margin-top: 15%;"></div>
@@ -577,9 +577,9 @@
 
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 17px;">Percentage of Talking Time</p>
+                        <p class="text-center" style="font-size: 17px;">Talking Time</p>
                     {% else %}
-                        <p class="text-center">Percentage of Talking Time</p>
+                        <p class="text-center">Talking Time</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div id="talkchart" style="width: 85%; height: 150px;"></div>
@@ -589,9 +589,9 @@
 
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Emotion Level</p>
+                        <p class="text-center" style="font-size: 18px;">Attentiveness</p>
                     {% else %}
-                        <p class="text-center">Emotion Level</p>
+                        <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div class="progress justify-content-center" style="height: 20px; width: 90%;">
@@ -633,9 +633,9 @@
                     <br>
                     {% if participant_num > 2 %}
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Participant Interactions</p>
+                        <p class="text-center" style="font-size: 18px;">Interactions</p>
                     {% else %}
-                        <p class="text-center">Participant Interactions</p>
+                        <p class="text-center">Interactions</p>
                     {% endif %}
                         {% if size == '1' %}
                             <div id="interactionchart" style="width: 90%; height: 100px; margin-top: 15%;"></div>
@@ -712,9 +712,9 @@
 
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Emotion Level</p>
+                        <p class="text-center" style="font-size: 18px;">Attentiveness</p>
                     {% else %}
-                        <p class="text-center">Emotion Level</p>
+                        <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div class="progress justify-content-center" style="height: 20px; width: 90%;">
@@ -730,9 +730,9 @@
 
                     {% if participant_num > 2 %}
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 18px;">Participant Interactions</p>
+                        <p class="text-center" style="font-size: 18px;">Interactions</p>
                     {% else %}
-                        <p class="text-center">Participant Interactions</p>
+                        <p class="text-center">Interactions</p>
                     {% endif %}
                         {% if size == '1' %}
                             <div id="interactionchart" style="width: 90%; height: 100px; margin-top: 15%;"></div>
@@ -752,9 +752,9 @@
                 <div class="col-sm-2" style="background: #f1f1f1; height: 590px;" align="center">
                     <br>
                     {% if info == '2' %}
-                        <p class="text-center" style="font-size: 17px;">Percentage of Talking Time</p>
+                        <p class="text-center" style="font-size: 17px;">Talking Time</p>
                     {% else %}
-                        <p class="text-center">Percentage of Talking Time</p>
+                        <p class="text-center">Talking Time</p>
                     {% endif %}
                     {% if size == '1' %}
                         <div id="talkchart" style="width: 85%; height: 150px;"></div>
