--- a/dashboard/dash_ui/templates/scratch.html
+++ b/dashboard/dash_ui/templates/scratch.html
@@ -13,6 +13,9 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 
+    <meta http-equiv="refresh" content="5">
+
+
     <!-- Google Charts -->
     <!-- Text Charts -->
     <script type="text/javascript">
@@ -144,6 +147,8 @@
             chart.draw(data, options);
         }
 
+        //interactions chart
+        //Sankey Chart
         function drawChart() {
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'From');
@@ -158,8 +163,8 @@
         ]);
 
         var colors = [
-            {% for each_color in user_colors%}
-                '{{each_color.1}}',
+            {% for each_color in interaction_colors%}
+                '{{each_color}}',
             {% endfor %}
             // '#006992', '#bc4b51', '#eca400', '#5b8e7d', '#784c9f'
         ] ;
@@ -197,6 +202,7 @@
       }
 
         
+        // DOESN'T WORK
         //interactions chart
         //Sankey Chart
         function interactionChart() {
@@ -356,7 +362,7 @@
     <!-- TOP BAR -->
     {% if layout == '1' %}
         <div class="container" style="padding-top: 2%;">
-            <div class="row" style="background: #f1f1f1; height: 250px;">
+            <div class="row" style="background: #f1f1f1; height: 290px;">
                 <div class="col-sm-2" style="background: #f1f1f1; width: 12.5%" align="center">
                     <br>
                     <!-- Settings -->
@@ -460,9 +466,9 @@
                         <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 100px;"></div>
                     {% else %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 80px;"></div>
                     {% endif %}
 
                     
@@ -562,9 +568,9 @@
                         <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 100px;"></div>
                     {% else %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 80px;"></div>
                     {% endif %}
 
 
@@ -696,9 +702,9 @@
                         <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 100px;"></div>
                     {% else %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 80px;"></div>
                     {% endif %}
 
                     <!--#############-->
@@ -811,9 +817,9 @@
                         <p class="text-center">Attentiveness</p>
                     {% endif %}
                     {% if size == '1' %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 100px;"></div>
                     {% else %}
-                        <div id="emotionchart" style="width: 100%; height: 120px;"></div>
+                        <div id="emotionchart" style="width: 100%; height: 80px;"></div>
                     {% endif %}
 
                     <br>
