--- a/dashboard/dash_ui/templates/scratch.html
+++ b/dashboard/dash_ui/templates/scratch.html
@@ -932,6 +932,8 @@
         </div>
     {% endif %}
 
+
+    <!-- this allows the dashboard to be opened in a new window, without the url bar/ bookmarks being visible -->
     <div class="alert alert-info" role="alert" style="width: 250px; margin: 15px;">
         <a href="../html-link.htm" target="popup" onclick="window.open('../html-link.htm','name','width=1500,height=1500')">Open page in new window</a>
     </div>
